tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-function-body.ari
fn helper() -> i64
fn main() -> i64 {
  return 0;
}
